Bug: 617906 Reviewer: Nathan Comment: Graphic on profile page seems to be clipped

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
@@ -171,7 +171,7 @@ text-transform:uppercase;
 border-bottom:1px solid #D2D5D1;
 }
 .sideBarTitle {
-padding-right: 5px;
+margin-right: 5px;
 display:inline;
 }
 .s-topContent {
